# forge

./: CLAUDE.md  pyproject.toml
benchmarks/: learning_benchmark.py  learning_benchmark_live.py
core/: __init__.py  agent.py  goal_stack.py  llm.py  memory.py  tracer.py  types.py  world_model.py
tests/: test_agent.py  test_goal_stack.py  test_learning.py  test_memory.py  test_tracer.py  test_types.py  test_world_model.py
